--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-# created-by: conda 25.1.1
+# created-by: conda 25.3.0
 _tflow_select=2.3.0=mkl
 abseil-cpp=20211102.0=h36ffca9_3
 absl-py=2.1.0=pyhd8ed1ab_1
@@ -26,6 +26,7 @@ click=8.1.8=pyh7428d3b_0
 colorama=0.4.6=pyhd8ed1ab_1
 cryptography=39.0.0=py310h52f42fa_0
 django=5.1.3=py310haa95532_0
+django-environ=0.12.0=pyhd8ed1ab_0
 djangorestframework=3.15.2=pyhd8ed1ab_1
 eigen=3.4.0=h2d74725_0
 ffmpeg=4.2.3=ha925a31_0
@@ -71,6 +72,7 @@ libiconv=1.17=h8ffe710_0
 liblapack=3.9.0=31_h1aa476e_mkl
 libogg=1.3.4=h8ffe710_1
 libpng=1.6.39=h8cc25b3_0
+libpq=13.3=hfcc5ef8_0
 libprotobuf=3.20.3=h23ce68f_0
 libssh2=1.10.0=h680486a_2
 libtiff=4.3.0=h0c97f57_1
@@ -101,6 +103,7 @@ pip=25.0=py310haa95532_0
 platformdirs=4.3.6=pyhd8ed1ab_1
 pooch=1.8.2=pyhd8ed1ab_1
 protobuf=3.20.3=py310h5588dad_1
+psycopg2=2.9.2=py310hcbf9ad4_0
 pthreads-win32=2.9.1=hfa6e2cd_3
 pyasn1=0.6.1=pyhd8ed1ab_2
 pyasn1-modules=0.4.1=pyhd8ed1ab_1
