--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ cryptography=39.0.0=py310h52f42fa_0
 django=5.1.3=py310haa95532_0
 django-environ=0.12.0=pyhd8ed1ab_0
 djangorestframework=3.15.2=pyhd8ed1ab_1
-djangorestframework-simplejwt=5.5.0=pypi_0
+djangorestframework_simplejwt=5.5.0
 eigen=3.4.0=h2d74725_0
 ffmpeg=4.2.3=ha925a31_0
 flatbuffers=23.3.3=h63175ca_0
@@ -109,7 +109,7 @@ pthreads-win32=2.9.1=hfa6e2cd_3
 pyasn1=0.6.1=pyhd8ed1ab_2
 pyasn1-modules=0.4.1=pyhd8ed1ab_1
 pycparser=2.22=pyh29332c3_1
-pyjwt=2.9.0=pypi_0
+pyjwt=2.9.0
 pyopenssl=23.2.0=pyhd8ed1ab_1
 pysocks=1.7.1=pyh09c184e_7
 python=3.10.11=h966fe2a_2
