--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -13,9 +13,9 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_db
+          POSTGRES_USER: your_db_user
+          POSTGRES_PASSWORD: your_db_password
+          POSTGRES_DB: oct_sense
         ports:
           - 5432:5432
         options: >-
@@ -32,17 +32,19 @@ jobs:
         with:
           python-version: 3.11
 
+      - name: Copy and load .env.example
+        run: |
+          cp .env.example .env
+          set -a
+          source .env
+          set +a
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Wait for DB and run migrations
-        env:
-          DB_HOST: localhost
-          DB_NAME: test_db
-          DB_USER: postgres
-          DB_PASSWORD: postgres
         run: |
           sleep 10
           python manage.py migrate
